# SwinJSCC_implementation

./: .gitignore  pyproject.toml
src/: __init__.py  config.py  inference.ipynb  main.py
src/data/: datasets.py
src/evaluation/: DJSCC_test.py
src/models/SwinJSCC/: channel.py  decoder.py  encoder.py  modules.py  network.py
src/models/deepJSCC/: decoder.py  encoder.py  network.py
src/training/: loss.py  trainer.py
src/utils/: helpers.py  logger.py
