[project]
name = "swinjscc-implementation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "datasets>=3.1.0",
    "matplotlib>=3.7.5",
    "timm>=1.0.22",
    "torch==1.11.0",
    "torchvision==0.12.0",
    "transformers>=4.46.3",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu113", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu113", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu113"
url = "https://download.pytorch.org/whl/cu113"
explicit = true
